Fixed  scroll issue when data overflow
Fixed issue when data overflow the scroll bar is scroll the whole
tab in assignserverrole left tables

--- a/src/styles/components/svrroleassigner.less
+++ b/src/styles/components/svrroleassigner.less
@@ -53,12 +53,13 @@
     position: relative;
     width: 100%;
     min-height: 30em;
-    height: 35em;
+    height: 40em;
     background: white;
     margin-bottom: 1em;
-    overflow: auto;
     .tab-pane {
       margin-top: 0.5em;
+      max-height: 36em;
+      overflow: auto;
     }
     &.server-dropzone{
       margin: 2px;
@@ -74,7 +75,7 @@
   }
 
   .role-accordion-container {
-    height: 38.5em;
+    height: 43.5em;
   }
 }
 
